@@ -20,8 +20,6 @@ class Sys::IO::Stat : pointer {
   
   native static method lstat : int ($path : string, $stat : Sys::IO::Stat);
   
-  native static method fstat_raw : int ($fd : int, $stat : Sys::IO::Stat);
-  
   native static method fstat : int ($fd : int, $stat : Sys::IO::Stat);
   
   # Instance methods
