@@ -8,6 +8,7 @@
     * Remove the access_raw method in the Sys::IO class.
     * Remove the eaccess_raw method in the Sys::IO class.
     * Remove the faccessat_raw method in the Sys::IO class.
+    * Remove the fstat_raw method in the Sys::IO::Stat class.
   [Document Fix]
     * Add the doc of the faccessat method in the Sys::IO class.
 0.494 2023-11-12
